# cdp-launcher-app

./: .editorconfig  .gitignore  DESIGN.md  LICENSE  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bootstrap-dev.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V1__initial.sql  V2__settings.sql  V3__provider.sql  V4__cluster_templates.sql  V5__managed_repo_settings.sql
src-tauri/src/: error.rs  git_sync.rs  lib.rs  main.rs
src-tauri/src/commands/: aws.rs  cluster.rs  health.rs  install.rs  keychain.rs  license.rs  mod.rs  template.rs  ui.rs
src-tauri/src/orchestrator/: destroy.rs  error_hints.rs  install.rs  mod.rs  scale.rs  tfvars.rs
src-tauri/src/runner/: mod.rs  process.rs
src-tauri/src/state/: mod.rs  store.rs
src/components/: AppShell.tsx  ClusterHealthPanel.tsx  ErrorHintBanner.tsx  LogPane.tsx  PhaseTracker.tsx  Sidebar.tsx  TemplatesPanel.tsx
src/lib/: tauri.ts  theme.tsx  types.ts
src/pages/: ClusterDetail.tsx  Dashboard.tsx  InstallProgress.tsx  InstallWizard.tsx  Settings.tsx
tools/: gen_license.py
